# c-examples

./: .gitignore  README.md
sub-dir-example/: CMakeLists.txt
sub-dir-example/cmake/Modules/: FindRdKafka.cmake
sub-dir-example/helper/: CMakeLists.txt
sub-dir-example/helper/include/helper/: helper.h
sub-dir-example/helper/src/: helper.cpp
sub-dir-example/src/: main.cpp  main.h  person.cpp  person.h
